[gd_scene load_steps=17 format=3 uid="uid://dy4wfsup5m0vv"]

[ext_resource type="Script" path="res://world.gd" id="1_k7nlv"]
[ext_resource type="PackedScene" uid="uid://cut7kwl1rucds" path="res://player.tscn" id="1_xnxp6"]
[ext_resource type="Texture2D" uid="uid://ciwolpqa2uwhm" path="res://Art/enviroment/survivalgame-terrian-defult.png" id="2_urlbu"]
[ext_resource type="Script" path="res://stake_manager.gd" id="3_8avr6"]
[ext_resource type="Texture2D" uid="uid://byknfwlldprov" path="res://Art/enviroment/survivalgame-terrian-cliffs.png" id="3_nrr1c"]
[ext_resource type="Texture2D" uid="uid://c5elq1lndmons" path="res://Art/enviroment/survivalgame-trees.png" id="4_h170o"]
[ext_resource type="PackedScene" uid="uid://djkht8mxwhu11" path="res://stake.tscn" id="4_leal4"]
[ext_resource type="Texture2D" uid="uid://bgb12ipkaflqe" path="res://Art/enviroment/survivalgame-terrian-water.png" id="5_a0ykx"]
[ext_resource type="PackedScene" uid="uid://xkqjxuebtu7h" path="res://enemy_spawner.tscn" id="6_lmofv"]
[ext_resource type="PackedScene" uid="uid://c6i02vakh1p1h" path="res://hud.tscn" id="10_ikq05"]
[ext_resource type="PackedScene" uid="uid://bfk41a7n63fvh" path="res://game_over.tscn" id="11_bqxwl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avlpx"]
texture = ExtResource("2_urlbu")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
20:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
21:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wg5en"]
texture = ExtResource("3_nrr1c")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
9:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uqejp"]
texture = ExtResource("4_h170o")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u8fvc"]
texture = ExtResource("5_a0ykx")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0

[sub_resource type="TileSet" id="TileSet_k2283"]
tile_size = Vector2i(40, 40)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 14
sources/0 = SubResource("TileSetAtlasSource_avlpx")
sources/1 = SubResource("TileSetAtlasSource_wg5en")
sources/2 = SubResource("TileSetAtlasSource_uqejp")
sources/3 = SubResource("TileSetAtlasSource_u8fvc")

[node name="world" type="Node2D"]
script = ExtResource("1_k7nlv")

[node name="Player" parent="." instance=ExtResource("1_xnxp6")]
position = Vector2(353, 368)
scale = Vector2(1.5, 1.5)

[node name="StakeManager" type="Node2D" parent="."]
script = ExtResource("3_8avr6")
stake_scene = ExtResource("4_leal4")

[node name="World" type="TileMap" parent="."]
physics_interpolation_mode = 2
tile_set = SubResource("TileSet_k2283")
format = 2
layer_0/name = "Bushes"
layer_0/tile_data = PackedInt32Array(917504, 917506, 1, 983040, 917506, 2, 851968, 917506, 1, 786432, 917506, 1, 720896, 917506, 1, 458752, 917506, 1, 393216, 917506, 1, 327680, 917506, 1, 262144, 917506, 1, 196608, 917506, 1, 131072, 917506, 1, 65536, 917506, 1, 0, 786434, 2, 1, 851970, 2, 2, 851970, 2, 3, 851970, 2, 4, 851970, 2, 5, 851970, 2, 6, 917506, 2, 1048591, 851970, 0, 1048576, 786434, 0, 1048577, 851970, 0, 1048578, 851970, 0, 1048579, 851970, 0, 1048580, 851970, 0, 1048581, 851970, 0, 1048582, 851970, 0, 1048586, 851970, 0, 1048587, 851970, 0, 1048588, 851970, 0, 1048589, 851970, 0, 1048590, 851970, 0, 720912, 786434, 1, 786448, 786434, 1, 851984, 786434, 1, 917520, 786434, 1, 983056, 786434, 2, 65552, 786434, 0, 131088, 786434, 1, 196624, 786434, 1, 262160, 786434, 1, 327696, 786434, 1, 393232, 786434, 1, 458768, 786434, 1, 11, 851970, 2, 12, 851970, 2, 13, 851970, 2, 14, 851970, 2, 15, 851970, 2, 16, 917506, 2, 10, 786434, 2, 1048592, 917506, 0, 1114122, 1048579, 0)
layer_1/name = "Grass"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(0, 65536, 2, 1, 131072, 2, 2, 0, 2, 3, 65536, 2, 4, 131072, 2, 5, 0, 2, 6, 65536, 2, 7, 131072, 2, 8, 0, 2, 9, 65536, 2, 10, 131072, 2, 11, 0, 2, 12, 65536, 2, 13, 131072, 2, 14, 0, 2, 15, 65536, 2, 65536, 65536, 0, 131072, 65536, 1, 196608, 65536, 2, 262144, 65536, 0, 327680, 65536, 1, 393216, 65536, 2, 458752, 65536, 0, 524288, 65536, 1, 589824, 65536, 2, 655360, 65536, 0, 720896, 65536, 1, 786432, 65536, 2, 851968, 65536, 0, 917504, 65536, 1, 983040, 65536, 2, 1048576, 65536, 0, 1048577, 131072, 0, 1048578, 0, 0, 1048579, 65536, 0, 1048580, 131072, 0, 1048581, 0, 0, 1048582, 65536, 0, 1048583, 131072, 0, 983047, 131072, 2, 983048, 0, 2, 983049, 65536, 2, 1048585, 65536, 0, 1048584, 0, 0, 1048586, 131072, 0, 1048587, 0, 0, 1048588, 65536, 0, 1048589, 131072, 0, 1048590, 0, 0, 1048591, 65536, 0, 983055, 65536, 2, 983054, 0, 2, 917518, 0, 1, 851982, 0, 0, 786446, 0, 2, 720910, 0, 1, 655374, 0, 0, 720911, 65536, 1, 786447, 65536, 2, 851983, 65536, 0, 917519, 65536, 1, 655375, 65536, 0, 589839, 65536, 2, 524303, 65536, 1, 458767, 65536, 0, 393231, 65536, 2, 327695, 65536, 1, 262159, 65536, 0, 196623, 65536, 2, 131087, 65536, 1, 65551, 65536, 0, 589828, 131072, 2, 524292, 131072, 1, 458756, 131072, 0, 393220, 131072, 2, 327684, 131072, 1, 262148, 131072, 0, 196612, 131072, 2, 131076, 131072, 1, 65540, 131072, 0, 65539, 65536, 0, 65538, 0, 0, 65537, 131072, 0, 131073, 131072, 1, 196609, 131072, 2, 262145, 131072, 0, 327681, 131072, 1, 393217, 131072, 2, 458753, 131072, 0, 524289, 131072, 1, 589825, 131072, 2, 655361, 131072, 0, 720897, 131072, 1, 786433, 131072, 2, 851969, 131072, 0, 917505, 131072, 1, 983041, 131072, 2, 983042, 0, 2, 917506, 0, 1, 851970, 0, 0, 786434, 0, 2, 720898, 0, 1, 655362, 0, 0, 589826, 0, 2, 524290, 0, 1, 458754, 0, 0, 393218, 0, 2, 327682, 0, 1, 262146, 0, 0, 196610, 0, 2, 131074, 0, 1, 131075, 65536, 1, 196611, 65536, 2, 262147, 65536, 0, 327683, 65536, 1, 393219, 65536, 2, 458755, 65536, 0, 524291, 65536, 1, 589827, 65536, 2, 655363, 65536, 0, 720899, 65536, 1, 786435, 65536, 2, 851971, 65536, 0, 917507, 65536, 1, 983043, 65536, 2, 983044, 131072, 2, 917508, 131072, 1, 851972, 131072, 0, 786436, 131072, 2, 720900, 131072, 1, 655364, 131072, 0, 655365, 0, 0, 589829, 0, 2, 524293, 0, 1, 458757, 0, 0, 393221, 0, 2, 327685, 0, 1, 262149, 0, 0, 196613, 0, 2, 131077, 0, 1, 65541, 0, 0, 65542, 65536, 0, 131078, 65536, 1, 196614, 65536, 2, 262150, 65536, 0, 327686, 65536, 1, 393222, 65536, 2, 458758, 65536, 0, 524294, 65536, 1, 589830, 65536, 2, 655366, 65536, 0, 720902, 65536, 1, 720901, 0, 1, 786437, 0, 2, 851973, 0, 0, 917509, 0, 1, 983045, 0, 2, 983046, 65536, 2, 917510, 65536, 1, 851974, 65536, 0, 786438, 65536, 2, 786439, 131072, 2, 720903, 131072, 1, 655367, 131072, 0, 589831, 131072, 2, 524295, 131072, 1, 458759, 131072, 0, 393223, 131072, 2, 327687, 131072, 1, 262151, 131072, 0, 196615, 131072, 2, 131079, 131072, 1, 65543, 131072, 0, 65544, 0, 0, 131080, 0, 1, 196616, 0, 2, 262152, 0, 0, 327688, 0, 1, 393224, 0, 2, 458760, 0, 0, 524296, 0, 1, 589832, 0, 2, 655368, 0, 0, 720904, 0, 1, 786440, 0, 2, 851976, 0, 0, 851975, 131072, 0, 917511, 131072, 1, 917512, 0, 1, 917513, 65536, 1, 851977, 65536, 0, 786441, 65536, 2, 720905, 65536, 1, 655369, 65536, 0, 589833, 65536, 2, 524297, 65536, 1, 458761, 65536, 0, 393225, 65536, 2, 327689, 65536, 1, 262153, 65536, 0, 196617, 65536, 2, 131081, 65536, 1, 65545, 65536, 0, 65546, 131072, 0, 131082, 131072, 1, 196618, 131072, 2, 262154, 131072, 0, 327690, 131072, 1, 393226, 131072, 2, 458762, 131072, 0, 524298, 131072, 1, 589834, 131072, 2, 655370, 131072, 0, 720906, 131072, 1, 786442, 131072, 2, 851978, 131072, 0, 917514, 131072, 1, 983050, 131072, 2, 983051, 0, 2, 917515, 0, 1, 851979, 0, 0, 786443, 0, 2, 720907, 0, 1, 655371, 0, 0, 589835, 0, 2, 524299, 0, 1, 458763, 0, 0, 393227, 0, 2, 327691, 0, 1, 262155, 0, 0, 196619, 0, 2, 131083, 0, 1, 65547, 0, 0, 65548, 65536, 0, 131084, 65536, 1, 196620, 65536, 2, 262156, 65536, 0, 327692, 65536, 1, 393228, 65536, 2, 458764, 65536, 0, 524300, 65536, 1, 589836, 65536, 2, 655372, 65536, 0, 720908, 65536, 1, 786444, 65536, 2, 851980, 65536, 0, 917516, 65536, 1, 983052, 65536, 2, 983053, 131072, 2, 917517, 131072, 1, 851981, 131072, 0, 786445, 131072, 2, 720909, 131072, 1, 655373, 131072, 0, 589837, 131072, 2, 524301, 131072, 1, 458765, 131072, 0, 393229, 131072, 2, 327693, 131072, 1, 262157, 131072, 0, 196621, 131072, 2, 131085, 131072, 1, 65549, 131072, 0, 65550, 0, 0, 131086, 0, 1, 196622, 0, 2, 262158, 0, 0, 327694, 0, 1, 393230, 0, 2, 458766, 0, 0, 524302, 0, 1, 589838, 0, 2, 917520, 131072, 0, 983056, 131072, 1, 1048592, 131072, 2, 720912, 131072, 0, 786448, 131072, 1, 851984, 131072, 2, 524304, 131072, 0, 589840, 131072, 1, 655376, 131072, 2, 327696, 131072, 0, 393232, 131072, 1, 458768, 131072, 2, 131088, 131072, 2, 196624, 131072, 1, 262160, 131072, 2, 16, 131072, 0, 65552, 131072, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="EnemySpawner" parent="." instance=ExtResource("6_lmofv")]

[node name="Hud" parent="." instance=ExtResource("10_ikq05")]
offset = Vector2(0, 680)
transform = Transform2D(1, 0, 0, 1, 0, 680)

[node name="GameOver" parent="." instance=ExtResource("11_bqxwl")]
process_mode = 2

[node name="RestartTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[connection signal="shoot" from="Player" to="StakeManager" method="_on_player_shoot"]
[connection signal="hit_p" from="EnemySpawner" to="." method="_on_enemy_spawner_hit_p"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
